# computational-biology

./: .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/examples/: demo_multi.fasta  demo_seq_1.fasta
docs/: roadmap.md
protein-function-prediction/: README.md
protein-function-prediction/notes/: biology_basics.md
src/dna_toolkit/: cli.py  config.py  main.py
src/dna_toolkit/analysis/: gc_content.py  motif_search.py  orf.py
src/dna_toolkit/io/: fasta_parser.py  writer.py
src/dna_toolkit/models/: sequence.py
src/dna_toolkit/services/: analysis_service.py
src/dna_toolkit/utils/: helpers.py  logging.py  validation.py
tests/: test_cli.py  test_gc_content.py  test_motif_search.py  test_orf.py  test_parser.py  test_sequence.py
